<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    android:orientation="vertical">
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_kegiatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_judul"
                android:text="@string/kegiatan"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_waktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_kegiatan"
                android:text="@string/waktu"
                android:textStyle="italic"
                android:textColor="@color/design_default_color_primary"
                android:textSize="20dp" />

            <ImageButton
                android:id="@+id/btn_hapus"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                android:layout_gravity="center"
                android:backgroundTint="#EC1414"/>

            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_hapus"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:backgroundTint="#09EDD8"
                android:src="@drawable/ic_edit_24" />

        </RelativeLayout>

</androidx.cardview.widget.CardView>